--- a/dashboard/pubspec.yaml
+++ b/dashboard/pubspec.yaml
@@ -21,15 +21,17 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
-  get: ^4.3.8
+  get: ^4.1.4
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
-  flutter_modular: ^4.2.0
   google_fonts: ^2.1.0
   charts_flutter: ^0.11.0
   data_table_2: ^2.1.1
+  device_preview:
+  syncfusion_flutter_charts: ^19.4.38
 
 dev_dependencies:
   flutter_test:
